--- a/public/producer/style.css
+++ b/public/producer/style.css
@@ -1,22 +1,39 @@
 body {
     margin : 10px 30px;
-    font-size : 16px;
+    font-size : 2.5vh;
+}
+
+
+
+#flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+#inner-container {
+    width: 50%;
+}
+
+#producer-info {
+    width: 30%;
+    height: fit-content;
+    text-align: center;
+}
+
+
+
+.panel-heading {
+    font-size : 3vh;
+    font-weight: bold;
 }
 
 .input-group {
     display : flex;
     align-items : center;
     justify-content: space-between;
-    width : fit-content;
-}
-
-.panel-default {
-    width : 60%;
-}
-
-.panel-heading {
-    font-size : 22px;
-    font-weight: bold;
+    width: fit-content;
 }
 
 .margin-horizontal {
@@ -25,4 +42,25 @@ body {
 
 .margin-vertical {
     margin : 10px 0px;
+}
+
+
+
+#producer-info > .panel-body {
+    display: flex;
+    flex-direction: column;
+    align-items : center;
+}
+
+#info-description {
+    color: gray;
+}
+
+#info-food {
+    width: 100%;
+    padding: 10px 0px;
+    text-align: center;
+    color:rgb(15, 80, 77);
+    background-color: rgb(232, 245, 250);
+    border: none;
 }
